crates/pack/tests/compile_fail/effect_proposals_field_rejects_fact.stderr
error[E0308]: mismatched types
 --> tests/compile_fail/effect_proposals_field_rejects_fact.rs:7:27
  |
7 |     let _: ProposedFact = fact;
  |            ------------   ^^^^ expected `ProposedFact`, found `ContextFact`
  |            |
  |            expected due to this
